# swc-plugin-bigint-literal

./: Cargo.toml  README.md  package.json
e2e/: package-lock.json  package.json
e2e/tests/: integration.test.js
src/: lib.rs  tests.rs
tests/fixture/literal/: input.js  output.js
tests/fixture/negative/: input.js  output.js
transform/: Cargo.toml
transform/src/: lib.rs
transform/tests/: fixture.rs
