[package]
name = "swc-plugin-bigint-literal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc_core = { version = "16.4.0", features = ["ecma_plugin_transform"] }
serde = { version = "1.0.218", features = ["derive"] }
swc-plugin-bigint-literal-transform = { path = "./transform" }

[dev-dependencies]
swc_ecma_parser = "10.0.0"
swc_ecma_transforms_testing = "11.0.1"
testing = "8.0.0"

[workspace]
members = ["transform"]
